feature extraction BOW and TF-IDF
I have the dense matrix contianing the features. But I still have to go about how to use them...

--- a/TREC/Collect_Tweets.ipynb
+++ b/TREC/Collect_Tweets.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "    Importing Modukes\n",
+    "    Importing Modules\n",
     "'''\n",
     "import csv, os, collections, json\n",
     "import numpy as np\n",
