--- a/TREC/30_TF-IDF Features by Disaster/10_2018 Train/Feature Extraction-2018-Train.ipynb
+++ b/TREC/30_TF-IDF Features by Disaster/10_2018 Train/Feature Extraction-2018-Train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,53 +19,17 @@
     "from nltk.tokenize import RegexpTokenizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "import os"
+    "import os\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.svm import SVC \n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\Vishaal\\\\Documents\\\\GitHub\\\\TREC_Distributed_Machine_Learning\\\\TREC\\\\10_Data\\\\30_Extracted Tweets by Disaster\\\\2018 Train'"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 2] The system cannot find the file specified: '2018 Train'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-64-7db3f731f09e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'2018 Train'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified: '2018 Train'"
-     ]
-    }
-   ],
-   "source": [
-    "os.chdir('2018 Train')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +38,7 @@
        "(2066, 16)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +107,7 @@
        " 'armedmen']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +149,7 @@
        " 'armedmen']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +195,7 @@
        " 'armedmen']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,13 +271,12 @@
     "'''\n",
     "\n",
     "tf=TfidfVectorizer()\n",
-    "text_tf= tf.fit_transform(lemmatized_array_join)\n",
-    "text_tf_dense = text_tf.todense()"
+    "text_tf= tf.fit_transform(lemmatized_array_join)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_tf= tf.fit_transform(lemmatized_array_join).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +335,7 @@
        "(2066, 7202)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +367,7 @@
        "(2066, 7202)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +424,7 @@
     "    return (lemmatized_array_join)\n",
     "    \n",
     "    \n",
-    "def tfidf(file, corpus):\n",
+    "def tfidf_to_CSV(file, corpus):\n",
     "    df = pd.read_csv(file+'_TREC_2018_train.csv')\n",
     "    tf=TfidfVectorizer()\n",
     "    text_tf= tf.fit_transform(corpus)\n",
@@ -496,22 +468,15 @@
     }
    ],
    "source": [
-    "event_type = ['Floods', 'Earthquake', 'Bushfire', 'Bombings', 'Tornado', 'Attack', 'SchoolShooting', 'typhoon' ]\n",
+    "'''event_type = ['Floods', 'Earthquake', 'Bushfire', 'Bombings', 'Tornado', 'Attack', 'SchoolShooting', 'typhoon' ]\n",
     "\n",
     "for disaster in event_type:\n",
     "    feature = preProcess(disaster)\n",
     "    df = tfidf(disaster, feature)\n",
     "    df.to_csv(disaster+'_tfidf_features_2018_train.csv')\n",
     "\n",
-    "    print(df.shape)"
+    "    print(df.shape)'''"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
