Update SVM with SGD.ipynb

--- a/TREC/SVM with SGD.ipynb
+++ b/TREC/SVM with SGD.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,20 +373,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8678606001936109\n"
+      "0.1951219512195122\n"
      ]
     }
    ],
    "source": [
-    "print(metrics.accuracy_score(t[0:2066], y_pred))"
+    "print(metrics.recall_score(t[0:2066], y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1785,  240],\n",
+       "       [  33,    8]], dtype=int64)"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "    TN = 1785\n",
+    "    FN = 33\n",
+    "    TP = 8\n",
+    "    FP = 240\n",
+    "'''\n",
+    "metrics.confusion_matrix(t[0:2066], y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.03225806451612903\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(metrics.precision_score(t[0:2066], y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "km = KMeans(n_clusters = 2, init = 'random', max_iter = 3000000, tol = 0.000000001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KMeans(algorithm='auto', copy_x=True, init='random', max_iter=3000000,\n",
+       "       n_clusters=2, n_init=10, n_jobs=None, precompute_distances='auto',\n",
+       "       random_state=None, tol=1e-09, verbose=0)"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "km.fit(text_tf[2066:,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "km_pred = km.predict(text_tf[0:2066,:])\n",
+    "np.unique(km_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(metrics.recall_score(np.array(t[0:2066]), km_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9801548886737658\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(metrics.accuracy_score(np.array(t[0:2066]), km_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Vishaal\\Anaconda3_Mod\\lib\\site-packages\\sklearn\\metrics\\classification.py:1437: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(metrics.precision_score(np.array(t[0:2066]), km_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2025,    0],\n",
+       "       [  41,    0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "    TN = 1785\n",
+    "    FN = 33\n",
+    "    TP = 8\n",
+    "    FP = 240\n",
+    "'''\n",
+    "metrics.confusion_matrix(np.array(t[0:2066]), km_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
