The train data is correct now. Noticed some tweets are duplicated and classified differently. Removed all duplicates to avoid confusing the algorithm. Finally, I've also removed the tfidf features in the dense form as csv files. Very cumbersome to deal with very large files. Will use sparse form.

--- a/TREC/Feature Extraction.ipynb
+++ b/TREC/Feature Extraction.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -18,8 +22,24 @@
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import RegexpTokenizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import os"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "os.chdir('10_Data/20_Extracted Tweets/10_2018 Train')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -616,6 +636,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
