progress summary created and rnn implemented in colab

--- a/TREC/30_Models/SVM with SGD.ipynb
+++ b/TREC/30_Models/SVM with SGD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -38,7 +38,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-101-0ca7c333717b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'10_Data/20_Extracted Tweets/10_2018 Train'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-11-0ca7c333717b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'10_Data/20_Extracted Tweets/10_2018 Train'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: '10_Data/20_Extracted Tweets/10_2018 Train'"
      ],
      "ename": "FileNotFoundError",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -61,11 +61,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "'C:\\\\Users\\\\Vishaal\\\\Documents\\\\GitHub\\\\TREC_Distributed_Machine_Learning\\\\TREC\\\\10_Data\\\\20_Extracted Tweets\\\\15_2018 Test'"
+      "text/plain": "'C:\\\\Users\\\\Vishaal\\\\Documents\\\\GitHub\\\\TREC_Distributed_Machine_Learning\\\\TREC\\\\10_Data\\\\20_Extracted Tweets\\\\10_2018 Train'"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 105
+     "execution_count": 15
     }
    ],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -91,10 +91,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 16,
    "outputs": [],
    "source": [
-    "os.chdir('../10_2018 Train')"
+    "os.chdir('../15_2018 Test')"
    ],
    "metadata": {
     "collapsed": false,
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 19,
    "outputs": [
     {
      "data": {
@@ -150,7 +150,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 110
+     "execution_count": 19
     }
    ],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 24,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 26,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 29,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -355,8 +355,7 @@
     {
      "name": "stdout",
      "text": [
-      "Recall Score =  0.4444444444444444\n",
-      "Precision Score =  0.008333333333333333\n"
+      "Recall Score =  0.4444444444444444\nPrecision Score =  0.0075046904315197\n"
      ],
      "output_type": "stream"
     }
@@ -381,15 +380,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 30,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[1000,  476],\n       [   5,    4]], dtype=int64)"
+      "text/plain": "array([[947, 529],\n       [  5,   4]], dtype=int64)"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 131
+     "execution_count": 30
     }
    ],
    "source": [
@@ -405,14 +404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "'''\n",
     "    Let us now balance the dataset and see what happens. We have 52 critical tweets so lets balance that with\n",
     "    200 low priority tweets.\n",
     "'''\n",
-    "df_low = df_c[df_c['Priority'] == 'Low'].sample(200)\n",
+    "df_low = df_c[df_c['Priority'] == 'Low'].sample(1000)\n",
     "df_crit = df_c[df_c['Priority'] == 'Critical']\n",
     "df_lc = pd.concat([df_low, df_crit])"
    ],
@@ -426,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "'''\n",
@@ -454,12 +453,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 49,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "Recall Score =  0.15384615384615385\nPrecision Score 0.25\n"
+      "Recall Score =  0.7692307692307693\nPrecision Score 0.08\n"
      ],
      "output_type": "stream"
     }
