--- a/TREC/RNN.ipynb
+++ b/TREC/RNN.ipynb
@@ -11,8 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stderr",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -38,7 +46,7 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
-     "is_executing": true
+     "is_executing": false
     }
    }
   },
@@ -58,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "os.chdir('10_Data/20_Extracted Tweets/10_2018 Train')"
@@ -67,7 +75,7 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
-     "is_executing": true
+     "is_executing": false
     }
    }
   },
@@ -335,11 +343,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-2cf4363e3317>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 't' is not defined"
+     ],
+     "ename": "NameError",
+     "evalue": "name 't' is not defined",
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "t\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "max(history.history['val_acc'])\n",
-    "\n",
     "\n"
    ],
    "metadata": {
