created sep critical csvs

--- a/TREC/10_Data/20_Extracted Tweets/15_2018 Test/Collect_Tweets_2018_TREC_test.ipynb
+++ b/TREC/10_Data/20_Extracted Tweets/15_2018 Test/Collect_Tweets_2018_TREC_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -35,11 +35,13 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "'C:\\\\Users\\\\Vishaal\\\\Documents\\\\GitHub\\\\TREC_Distributed_Machine_Learning\\\\TREC\\\\10_Data\\\\20_Extracted Tweets\\\\15_2018 Test'"
+      "text/plain": [
+       "'C:\\\\Users\\\\Vishaal\\\\Documents\\\\GitHub\\\\TREC_Distributed_Machine_Learning\\\\TREC\\\\10_Data\\\\20_Extracted Tweets\\\\15_2018 Test'"
+      ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 80
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -206,19 +208,21 @@
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {
-    "scrolled": true,
     "pycharm": {
      "is_executing": false
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "(22216, 11)"
+      "text/plain": [
+       "(22216, 11)"
+      ]
      },
+     "execution_count": 87,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 87
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -313,19 +317,21 @@
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {
-    "scrolled": true,
     "pycharm": {
      "is_executing": false
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "(15865, 14)"
+      "text/plain": [
+       "(15865, 14)"
+      ]
      },
+     "execution_count": 77,
      "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 77
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -343,6 +349,19 @@
    "outputs": [],
    "source": [
     "joindf.to_csv('Ultimate_Dataframe_TREC_2018_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df = pd.read_csv('Ultimate_Dataframe_TREC_2018_test.csv')\n",
+    "df_c = df[df['Priority'] == 'Critical']\n",
+    "new = df_c[['ID', 'Event', 'Tweet', 'Categories', 'Priority']].copy()\n",
+    "new.to_csv('Ultimate_Dataframe_TREC_2018_test_only_critical.csv')"
    ]
   },
   {
@@ -374,10 +393,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
