adding csv with word2vec embeddings

--- a/TREC/30_Models/Word_Embeddings_LSTM(Works!).ipynb
+++ b/TREC/30_Models/Word_Embeddings_LSTM(Works!).ipynb
@@ -569,7 +569,9 @@
     "'''\n",
     "    Getting the unique words out\n",
     "'''\n",
-    "unique_words = set(all_words)"
+    "unique_words = set(all_words)\n",
+    "\n",
+    "\n"
    ]
   },
   {
