LSTM not working. But final stages

--- a/TREC/30_Models/Word2Vec SVM .ipynb
+++ b/TREC/30_Models/Word2Vec SVM .ipynb
@@ -2156,7 +2156,7 @@
    ],
    "source": [
     "'''\n",
-    "\n",
+    "    Having issues with the vector...\n",
     "'''\n",
     "clf.fit(X_train_q_l, to_categorical(Y_train_q_l))\n",
     "y_pred_q_l = clf.predict(np.array(X_val_q_l)[0])"
