svm ran separately for floods and quakes. Work in progress for lr Vs acc plots

--- a/TREC/30_Models/Word2Vec LSTM(Works!).ipynb
+++ b/TREC/30_Models/Word2Vec LSTM(Works!).ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -3398,13 +3398,7 @@
       "42/42 [==============================] - 0s 2ms/step - loss: 0.5122 - acc: 0.7857 - precision_228: 0.7500 - recall_228: 0.7895 - auc_228: 0.8181 - val_loss: 1.3322 - val_acc: 0.4444 - val_precision_228: 0.6667 - val_recall_228: 0.1818 - val_auc_228: 0.4675\n",
       "Epoch 30/200\n",
       "42/42 [==============================] - 0s 2ms/step - loss: 0.5404 - acc: 0.7143 - precision_228: 0.7692 - recall_228: 0.5263 - auc_228: 0.8204 - val_loss: 1.0627 - val_acc: 0.3889 - val_precision_228: 0.5000 - val_recall_228: 0.3636 - val_auc_228: 0.4351\n",
-      "Epoch 31/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 31/200\n",
       "42/42 [==============================] - 0s 2ms/step - loss: 0.4671 - acc: 0.7381 - precision_228: 0.7500 - recall_228: 0.6316 - auc_228: 0.8524 - val_loss: 1.1727 - val_acc: 0.5556 - val_precision_228: 0.8000 - val_recall_228: 0.3636 - val_auc_228: 0.4221\n",
       "Epoch 32/200\n",
       "42/42 [==============================] - 0s 2ms/step - loss: 0.5360 - acc: 0.7619 - precision_228: 0.7647 - recall_228: 0.6842 - auc_228: 0.7975 - val_loss: 1.0719 - val_acc: 0.3889 - val_precision_228: 0.5000 - val_recall_228: 0.3636 - val_auc_228: 0.4156\n",
@@ -3596,13 +3590,7 @@
       "42/42 [==============================] - 0s 2ms/step - loss: 0.4085 - acc: 0.7857 - precision_228: 0.7500 - recall_228: 0.7895 - auc_228: 0.8913 - val_loss: 1.4423 - val_acc: 0.4444 - val_precision_228: 0.5714 - val_recall_228: 0.3636 - val_auc_228: 0.4545\n",
       "Epoch 120/200\n",
       "42/42 [==============================] - 0s 1ms/step - loss: 0.4932 - acc: 0.8095 - precision_228: 0.7619 - recall_228: 0.8421 - auc_228: 0.8410 - val_loss: 1.6670 - val_acc: 0.2778 - val_precision_228: 0.2500 - val_recall_228: 0.0909 - val_auc_228: 0.3961\n",
-      "Epoch 121/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 121/200\n",
       "42/42 [==============================] - 0s 2ms/step - loss: 0.3934 - acc: 0.7619 - precision_228: 0.7368 - recall_228: 0.7368 - auc_228: 0.8879 - val_loss: 1.4908 - val_acc: 0.4444 - val_precision_228: 0.5714 - val_recall_228: 0.3636 - val_auc_228: 0.3117\n",
       "Epoch 122/200\n",
       "42/42 [==============================] - 0s 2ms/step - loss: 0.4032 - acc: 0.8095 - precision_228: 0.7619 - recall_228: 0.8421 - auc_228: 0.9050 - val_loss: 1.9336 - val_acc: 0.3889 - val_precision_228: 0.5000 - val_recall_228: 0.0909 - val_auc_228: 0.3182\n",
@@ -3728,13 +3716,7 @@
       "42/42 [==============================] - 0s 2ms/step - loss: 0.4082 - acc: 0.7857 - precision_228: 0.7273 - recall_228: 0.8421 - auc_228: 0.8902 - val_loss: 2.4492 - val_acc: 0.2778 - val_precision_228: 0.2500 - val_recall_228: 0.0909 - val_auc_228: 0.2922\n",
       "Epoch 180/200\n",
       "42/42 [==============================] - 0s 2ms/step - loss: 0.3715 - acc: 0.8095 - precision_228: 0.7895 - recall_228: 0.7895 - auc_228: 0.9336 - val_loss: 2.2460 - val_acc: 0.3889 - val_precision_228: 0.5000 - val_recall_228: 0.2727 - val_auc_228: 0.3766\n",
-      "Epoch 181/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 181/200\n",
       "42/42 [==============================] - 0s 2ms/step - loss: 0.4176 - acc: 0.7619 - precision_228: 0.7368 - recall_228: 0.7368 - auc_228: 0.8844 - val_loss: 2.1880 - val_acc: 0.3889 - val_precision_228: 0.5000 - val_recall_228: 0.2727 - val_auc_228: 0.4286\n",
       "Epoch 182/200\n",
       "42/42 [==============================] - 0s 2ms/step - loss: 0.3553 - acc: 0.7857 - precision_228: 0.7778 - recall_228: 0.7368 - auc_228: 0.9130 - val_loss: 2.4379 - val_acc: 0.3889 - val_precision_228: 0.5000 - val_recall_228: 0.1818 - val_auc_228: 0.3896\n",
