SVM word2vec del and incorporated to SVM file

--- a/TREC/30_Models/LSTM_RNN_TFIDF(Does not work).ipynb
+++ b/TREC/30_Models/LSTM_RNN_TFIDF(Does not work).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -11,7 +11,15 @@
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
