--- a/TREC/30_Models/Word2Vec LSTM(Works!).ipynb
+++ b/TREC/30_Models/Word2Vec LSTM(Works!).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 137,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -163,6 +163,26 @@
    "source": [
     "df_e2_embed = pd.read_csv('Earthquake_TREC_2018_test.csv')\n",
     "df_f2_embed = pd.read_csv('Floods_TREC_2018_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Vishaal\\\\Documents\\\\GitHub\\\\TREC_Distributed_Machine_Learning\\\\TREC\\\\10_Data\\\\20_Extracted Tweets\\\\15_2018 Test'"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
    ]
   },
   {
@@ -2979,7 +2999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 139,
    "metadata": {
     "pycharm": {
      "is_executing": false
